--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,22 @@
     </properties>
 
     <modules>
+        <module>proto</module>
         <module>engine</module>
     </modules>
 
     <prerequisites>
         <maven>3.2.1</maven>
     </prerequisites>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
