--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dbolshak.protoc</groupId>
-    <artifactId>prototype</artifactId>
+    <artifactId>protoc</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
