--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.dbolshak.protoc</groupId>
-        <artifactId>prototype</artifactId>
+        <artifactId>protoc</artifactId>
         <version>0.0.1</version>
     </parent>
     <artifactId>proto</artifactId>
